<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:elevation="20dp"
        app:cardBackgroundColor="#1E1E20"
        app:cardCornerRadius="20dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/image_card"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                app:cardBackgroundColor="@color/light_black"
                app:cardCornerRadius="10dp">

                <ImageView
                    android:id="@+id/map_picture"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY">
                </ImageView>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/city_name"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/image_card"
                android:layout_marginStart="40dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/background_city_state"
                android:gravity="center"
                android:paddingStart="5dp"
                android:paddingTop="5dp"
                android:paddingEnd="5dp"
                android:paddingBottom="5dp"
                android:text="@string/city_name"
                android:textColor="@color/white">

            </TextView>

            <TextView
                android:id="@+id/state_name"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/image_card"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/background_city_state"
                android:gravity="center"
                android:paddingStart="5dp"
                android:paddingTop="5dp"
                android:paddingEnd="5dp"
                android:paddingBottom="5dp"
                android:text="@string/state_name"
                android:textColor="@color/white">

            </TextView>


            <TextView
                android:id="@+id/ride_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/city_name"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="40dp"
                android:text="@string/ride_id_002"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"

                >

            </TextView>


            <TextView
                android:id="@+id/origin_station"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ride_no"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="40dp"
                android:text="@string/origin_station_20"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"

                >

            </TextView>

            <TextView
                android:id="@+id/station_path"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/origin_station"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="40dp"
                android:text="@string/station_path_23_42_45_48_56_60_77_81_93"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"

                >

            </TextView>


            <TextView
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/station_path"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="40dp"
                android:text="@string/date_15th_feb_2022_16_33"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"

                >

            </TextView>


            <TextView
                android:id="@+id/distance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/date"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="20dp"
                android:text="@string/distance_0"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"

                >

            </TextView>


        </RelativeLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>