<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_black"
    android:fitsSystemWindows="true"
    tools:context=".ui.Activities.MainActivity">


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/myToolbar"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="#222222"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/text_one"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="5dp"
                        android:paddingEnd="9dp"
                        android:paddingStart="9dp"
                        android:text="@string/edvora"
                        android:textColor="@color/white"
                        android:textSize="30sp"
                        android:textStyle="bold">

                    </TextView>

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:layout_alignEnd="@+id/profile"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="55dp"
                        android:gravity="end"
                        android:paddingEnd="9dp"
                        android:text=""
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold">

                    </TextView>


                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profile"
                        android:layout_width="45dp"
                        android:layout_height="50dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="10dp"
                        android:src="@drawable/person">

                    </de.hdodenhof.circleimageview.CircleImageView>


                </RelativeLayout>

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>


        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/snackbar_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="80dp">

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:gravity="center_vertical"
                    android:paddingStart="8dp"
                    android:text="@string/rides"
                    android:textColor="@color/fade_white"
                    tools:ignore="RtlSymmetry">

                </TextView>


                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/standing_tab_layout"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="60dp"
                    android:layout_marginEnd="80dp"
                    android:background="@color/light_black"
                    app:tabIndicatorColor="@color/white"
                    app:tabIndicatorFullWidth="false"
                    app:tabSelectedTextColor="#FFF"
                    app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget"
                    app:tabTextColor="@color/fade_white">

                </com.google.android.material.tabs.TabLayout>

                <LinearLayout
                    android:id="@+id/filter_layout"
                    android:layout_width="70dp"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="10dp"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="3"
                        android:paddingTop="5dp"
                        android:src="@drawable/filter">

                    </ImageView>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_alignParentEnd="true"
                        android:layout_weight="7"
                        android:gravity="center_vertical"
                        android:paddingStart="8dp"
                        android:paddingTop="5dp"
                        android:text="@string/filters"
                        android:textColor="@color/white"
                        tools:ignore="ObsoleteLayoutParam,RtlSymmetry">

                    </TextView>

                </LinearLayout>

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/viewPager"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/standing_tab_layout" />


                <RelativeLayout
                    android:id="@+id/filter_box_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#803D3C41"
                    android:visibility="gone">

                    <androidx.cardview.widget.CardView
                        android:layout_width="240dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="70dp"
                        android:layout_marginEnd="50dp"
                        android:padding="5dp"
                        app:cardBackgroundColor="@color/black"
                        app:cardCornerRadius="10dp">


                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="20dp">


                            <TextView
                                android:id="@+id/textfilter"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/filters"
                                android:textColor="@color/fade_white"
                                android:textSize="18sp">

                            </TextView>

                            <TextView
                                android:id="@+id/divider"
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:layout_below="@+id/textfilter"
                                android:layout_marginTop="10dp"
                                android:background="@color/fade_white">

                            </TextView>


                            <androidx.appcompat.widget.AppCompatSpinner
                                android:id="@+id/state_spinner"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/divider"
                                android:layout_marginTop="20dp"
                                android:drawableEnd="@drawable/down"
                                android:paddingStart="10dp"
                                android:paddingBottom="4dp"
                                android:popupBackground="@color/light_black"
                                android:singleLine="true"
                                tools:ignore="RtlSymmetry">

                            </androidx.appcompat.widget.AppCompatSpinner>

                            <TextView
                                android:id="@+id/state_spinner_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/divider"
                                android:layout_marginTop="20dp"
                                android:background="@drawable/background_city_state_filter"
                                android:drawableEnd="@drawable/down"
                                android:paddingStart="10dp"
                                android:paddingTop="4dp"
                                android:paddingBottom="4dp"
                                android:text="@string/state"
                                android:textColor="@color/white"
                                tools:ignore="RtlSymmetry,UseCompatTextViewDrawableXml">

                            </TextView>


                            <androidx.appcompat.widget.AppCompatSpinner
                                android:id="@+id/city_spinner"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/state_spinner_text"
                                android:layout_marginTop="15dp"
                                android:drawableEnd="@drawable/down"
                                android:paddingStart="10dp"
                                android:paddingBottom="4dp"
                                android:popupBackground="@color/light_black"
                                android:popupTheme="@color/white"
                                android:textColor="@color/white"
                                tools:ignore="RtlSymmetry">

                            </androidx.appcompat.widget.AppCompatSpinner>

                            <TextView
                                android:id="@+id/city_spinner_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/state_spinner_text"
                                android:layout_marginTop="15dp"
                                android:background="@drawable/background_city_state_filter"
                                android:drawableEnd="@drawable/down"
                                android:paddingStart="10dp"
                                android:paddingTop="4dp"
                                android:paddingBottom="4dp"
                                android:text="@string/city"
                                android:textAppearance="?android:attr/textAppearanceLarge"
                                android:textColor="@color/white"
                                android:textSize="15sp"
                                tools:ignore="RtlSymmetry,UseCompatTextViewDrawableXml">

                            </TextView>


                        </RelativeLayout>


                    </androidx.cardview.widget.CardView>


                </RelativeLayout>

            </RelativeLayout>


        </androidx.coordinatorlayout.widget.CoordinatorLayout>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>





